--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,14 @@
 body {
   text-align: center;
+  background-color: #1C2331;
+  font-family: 'Space Mono', monospace;
+}
+
+a:link, a:active, a:visited {
+  color: #c2185b;
+}
+
+.content {
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
