--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5,7 +5,7 @@ body {
 }
 
 a:link, a:active, a:visited {
-  color: #c2185b;
+  color: #fff;
 }
 
 .content {
@@ -13,6 +13,6 @@ a:link, a:active, a:visited {
   margin-bottom: 1em;
 }
 
-h3 {
-  color: #f48fb1
+h3, h4 {
+  color: #f48fb1;
 }
