--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,7 +1,7 @@
 body {
   text-align: center;
   background-color: #1C2331;
-  font-family: 'Space Mono', monospace;
+  font-family: 'Slabo 27px', serif;
 }
 
 a:link, a:active, a:visited {
